# agentic-03bc2172

./: .gitignore  Dockerfile  README.md  pyproject.toml  vercel.json
examples/: basic_usage.py
src/insightagent/: __init__.py  agents.py  config.py  heuristics.py  metrics.py  models.py  orchestrator.py
tests/: test_heuristics.py  test_metrics.py  test_orchestrator.py
web/: index.html
